# s100-esp

./: .gitattributes  .gitignore  AGENTS.md
assembly/: BIOS.ASM  BOOT2STAGE.ASM  BOOTLOADER.ASM  README.md  build.sh
components/cpu/: CMakeLists.txt
components/cpu/include/: z80_cpu.hpp
components/cpu/src/: z80_cpu.cpp
components/disk/: CMakeLists.txt
components/machine/: CMakeLists.txt
components/machine/include/: machine.hpp
components/machine/src/: machine.cpp
components/memory/: CMakeLists.txt
components/memory/include/: memory_map.hpp
components/memory/src/: memory_map.cpp
components/uart/: CMakeLists.txt
components/uart/include/: linux_console.hpp  uart_8250.hpp  uart_platform.hpp
components/uart/src/: linux_console.cpp  uart_8250.cpp
disks/: 5dsys-ii.dsk  5dsys-ii.imd  820-sys5.imd  8202cpm5.imd
docs/: architecture.md  cpm22-bios-reference.md  implementation-plan.md
esp32/: CMakeLists.txt
esp32/main/: main.cpp
experiments/z80_hello/: CMakeLists.txt  main.cpp
linux/: CMakeLists.txt  chips_impl.c  main.cpp
roms/monitor/: monitor_rom.hpp
